# chat-grpc

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  cli.py  docker-compose.yaml  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yaml
docker/: server.Dockerfile
docker/server/: Dockerfile
pkg/protobuf/auth_service/: auth_service_pb2.py  auth_service_pb2_grpc.py
pkg/protobuf/chat_service/: chat_service_pb2.py  chat_service_pb2_grpc.py
proto/: buf.gen.yaml  buf.yaml
proto/pkg/protobuf/auth_service/: auth_service.proto
proto/pkg/protobuf/chat_service/: chat_service.proto
src/client/: app.py
src/client/interceptor/: token_interceptor.py
src/client/listener/: event.py
src/client/pages/: auth.py  index.py
src/server/: server.py
src/server/internal/auth/entities/: custom_context.py  jwt_blacklist.py  user.py
src/server/internal/auth/services/: auth.py  interceptor.py
src/server/internal/auth/services/interceptor/: interceptor.py  jwt_interceptor.py
src/server/internal/chat/entities/: event.py  event_queue.py  message.py  user.py
src/server/internal/chat/services/: chat.py
src/shared/interceptor/: base_interceptor.py  logging_interceptor.py
src/shared/pages/: base.py  error.py  popup.py
