[tool.poetry]
name = "python-template"
version = "0.0.0"
description = "A simple python template"
authors = ["Duong Vinh <tienvinh.duong4@gmail.com>"]

[tool.poe.tasks]
dev = "python cli.py"
lint = "flake8"
"sort_import" = "isort ."
pretty = "black ."
test = "echo You are running test command"
deploy = "echo You are running deploy command"
"demo" = "python demo.py"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
environs = "^9.5.0"
typer = "^0.7.0"
dearpygui = "^1.9.0"
grpcio = "^1.54.2"
protobuf = "^4.23.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
poetry-pre-commit-plugin = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
