[tool.poetry]
name = "chat-grpc"
version = "0.0.0"
description = "Chat app with gRPC Python server"
authors = ["Duong Vinh <tienvinh.duong4@gmail.com>"]
package-mode = false

[tool.poe.tasks]
dev = "python cli.py"
lint = "ruff check --fix"
pretty = "ruff format"
demo = "python assets/demo.py"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["pkg"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.poetry.dependencies]
python = "^3.12"
environs = "^9.5.0"
typer = "^0.7.0"
dearpygui = "^1.9.0"
grpcio = "^1.54.2"
protobuf = "^5.27.1"
pydantic = "^1.10.9"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
grpc-interceptor = "^0.15.2"
pyjwt = "^2.7.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
ruff = "^0.4.10"
types-protobuf = "^5.26.0.20240422"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
